Lift out source and put docs in one place.

--- a/README
+++ b/README
@@ -24,6 +24,17 @@ attic
 		Stubs for various HPAPL elements to hash out ideas are also 
 		in here.
 
++-compiler
+		This directory contains many sketches and approaches to a
+		compiler for HPAPL. Some of these contail runtimes, and 
+		others contain just compilers. They use various implementation
+		techniques and most of them must be considered forays 
+		into possible approaches, rather than complete compilers.
+		
++-+-vN
+		Each of these directories represents a progression of 
+		ideas in the design of the system.
+		
 +-runtime
 		This was an early draft of a potential runtime, to flesh 
 		out ideas.
@@ -31,19 +42,15 @@ attic
 +-tests
 		This is where some tests were placed early on to get a 
 		feel for what HPAPL might feel like.
+
+doc
+		Volatile documentation or other non-source entities go 
+		in here. It is expected that user documentation, guides, 
+		tutorials, ideas, and other forms of documentation that 
+		are not part of the source code proper will be in here.
+		This includes things like ChangeLogs and Histories.
 		
-compiler
-		This directory contains many sketches and approaches to a
-		compiler for HPAPL. Some of these contail runtimes, and 
-		others contain just compilers. They use various implementation
-		techniques and most of them must be considered forays 
-		into possible approaches, rather than complete compilers.
-		
-+-vN
-		Each of these directories represents a progression of 
-		ideas in the design of the system.
-		
-extra
++-extra
 		This director contains miscellanous elements, mostly in 
 		the form of book keeping or the like. There are some ideas
 		that came from my work with Dyalog in here as well.
@@ -78,4 +85,10 @@ research
 		of interest. They may include potentiall tangential papers 
 		or other notes, but they came up at some point in the 
 		design of HPAPL.
+
+src
+		This is what is considered the main source of the system 
+		now, and likely to be the end result of the research in 
+		terms of code that is systems oriented, rather than theory
+		based.
 		
