Start filling out the HPAPL informal language section

--- a/isabelle/HPAPL/document/root.tex
+++ b/isabelle/HPAPL/document/root.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt,letterpaper]{article}
-\usepackage{isabelle,isabellesym}
+\usepackage{isabelle,isabellesym,amsmath}
 
 % further packages required for unusual symbols (see also
 % isabellesym.sty), use only when needed
