Update the name

--- a/isabelle/Osmium/document/introduction.tex
+++ b/isabelle/Osmium/document/introduction.tex
@@ -53,7 +53,7 @@ functions provided by the Dyalog APL system. This enables proofs of
 correctness and properties of many Dyalog APL programs. Furthermore, 
 this formalism is combined with a Hoare-logic, also mechanized fully 
 in Isabelle, for the formal verification of the parallel extensions 
-of Dfns implemented by HPAPL. The Hoare-logic simplifies proofs about 
+of Dfns implemented by Osmium. The Hoare-logic simplifies proofs about 
 non-determinism by providing inference rules enabling the derivation 
 of correct, multiple assignment programs from deterministic by construction 
 single assignment programs.
